--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,7 @@
 <ion-nav [root]="rootPage"></ion-nav>
+<div *ngIf="showSplash" class="splash">
+    <div class="spinner">
+        <div class="cube1"></div>
+        <div class="cube2"></div>
+    </div>
+</div>
