--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,8 @@
 <ion-nav [root]="rootPage"></ion-nav>
 <div *ngIf="showSplash" class="splash">
+
+    <div class="introText">Vebruiksmanager</div>
+    
     <div class="spinner">
         <div class="cube1"></div>
         <div class="cube2"></div>
