--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -20,11 +20,25 @@
     width: 100%;
     height: 100%;
     z-index: 999;
-    display: flex;
+    // display: flex;
     align-items: center;
     justify-content: center;
     background: #2980b9;
   }
+
+
+  .introText {
+    // vertical-align: text-bottom;
+    margin: 100px auto;
+    text-align: center;
+    color: #fff;    
+    margin: 150px auto;
+    font-size: 250%;
+    // font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bolder; 
+  }
+
 
   .spinner {
     margin: 100px auto;
