--- a/src/pages/more/more.scss
+++ b/src/pages/more/more.scss
@@ -1,6 +1,9 @@
 page-more {
     .scroll-content {
         padding: 0 !important;
-      }
+        }
+    .button-inner {
+        justify-content: left;
+    }
 }
 
