--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -1,3 +1,8 @@
 page-settings {
-
+    .scroll-content {
+        padding: 0 !important;
+      }
+    .button-inner {
+        justify-content: left;
+    }
 }
