--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <ion-nav [root]="rootPage"></ion-nav>
 <div *ngIf="showSplash" class="splash">
 
-    <div class="introText">Vebruiksmanager</div>
+    <div class="introText">Verbruiksmanager</div>
     
     <div class="spinner">
         <div class="cube1"></div>
