uncommented the ion-header segments, installed HighCharts and added dummy charts for daily, monthly, yearly and overall segments

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,6 @@
 page-home {
-    .scroll -content {
-        background-color: #f4f4f0 !important;
+    .greyish {
+        background-color: #f4f4f4;
     }
     .wrapper {
         // min-height: 40px;  
