--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-nav [root]="rootPage" [class]="chosenTheme"></ion-nav>
 <div *ngIf="showSplash" class="splash">
 
     <div class="introText">Verbruiksmanager</div>
