--- a/src/pages/more/more.scss
+++ b/src/pages/more/more.scss
@@ -1,4 +1,10 @@
 page-more {
-
+    .wrapper {
+        margin-top: -18px;
+        padding-left: 16px;
+    }
+    .small {
+        font-size:  80%;
+    }
 }
 
