Fixed some theme stuff

--- a/src/theme/app.light.scss
+++ b/src/theme/app.light.scss
@@ -11,7 +11,7 @@
     }
     ion-list {
       .item {
-        background-color: darken($light-background, 1.5%);
+        background-color: ($light-light);
       }
     }
   }
